# ZVisionGenerator

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  index.html  mkdocs.yml  prompts.yaml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
assets/: zvision.af
development/: index.html
docs/: development.md  getting-started.md  index.md
docs/architecture/: web-ui.md
docs/guides/: converter.md  image.md  model.md  prompts.md  video.md  web-ui.md
docs/reference/: cli.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: main.ts  test-setup.ts
frontend/src/app/: App.svelte  fix-cycle-3-job-card-parity.test.ts  fix-cycle-regressions.test.ts  global.css  pathfield-migration.test.ts
frontend/src/features/config/: ConfigPage.svelte
frontend/src/features/gallery/: GalleryPage.svelte  GalleryPage.test.ts
frontend/src/features/workspace/: ControlsSidebar.svelte  HistoryPane.svelte  WorkspacePage.svelte  WorkspacePage.test.ts
frontend/src/lib/api/: client.ts  config.ts  gallery.ts  index.ts  models.ts  promptFiles.ts  sse.test.ts  sse.ts  workspace.ts
frontend/src/lib/components/atoms/: Badge.svelte  Button.svelte  Input.svelte  Label.svelte  RangeSlider.svelte  Select.svelte  Separator.svelte  Spinner.svelte  Textarea.svelte  Toggle.svelte  ToolbarSelectShell.svelte  index.ts
frontend/src/lib/components/molecules/: FormField.svelte  ImageCard.svelte  ImageCard.test.ts  JobCard.svelte  Modal.svelte  Modal.test.ts  NavItem.svelte  PathField.svelte  ProgressBar.svelte  PromptFileField.svelte  Toast.svelte  ToastContainer.svelte  index.ts
frontend/src/lib/components/organisms/: AdminPageShell.svelte  PromptFileEditorDialog.svelte  TopNav.svelte  index.ts
frontend/src/lib/state/: draft.svelte.ts  draft.test.ts  history.svelte.ts  job.svelte.ts  router.svelte.ts  toasts.svelte.ts
frontend/src/lib/types/: index.ts
getting-started/: index.html
guides/converter/: index.html
guides/image/: index.html
guides/model/: index.html
guides/prompts/: index.html
guides/video/: index.html
reference/cli/: index.html
search/: search_index.json
tests/: conftest.py  test_backend_protocol.py  test_cli.py  test_cli_convert.py  test_cli_parsing.py  test_config.py  test_console.py  test_contrast.py  test_convert_checkpoint.py  test_ffmpeg.py  test_filename.py  test_image_win.py  test_interactive.py  test_list_assets.py  test_lora_import.py  test_lora_unification.py  test_model_detect.py  test_negative_prompt.py  test_paths.py  test_platform.py  test_prompt_compose.py  test_prompt_loading.py  test_ratio_size.py  test_resolve_prompt.py  test_runner_outcome.py  test_saturation.py  test_sharpen.py  test_smoke.py  test_strip_audio.py  test_upscale_denoise.py  test_vendor_integrity.py  test_version.py  test_video_backend_protocol.py  test_video_cli.py  test_video_model_detect.py  test_video_name_resolution.py  test_video_runner.py  test_video_stages.py  test_video_upscale.py  test_video_win.py  (+6 more)
zvisiongenerator/: __init__.py  cli.py  config.yaml  image_cli.py  image_runner.py  video_cli.py  video_runner.py
zvisiongenerator/backends/: __init__.py  image_mac.py  image_win.py  video_mac.py  video_win.py
zvisiongenerator/converters/: __init__.py  convert_checkpoint.py  list_assets.py  lora_import.py
zvisiongenerator/core/: __init__.py  image_backend.py  image_types.py  types.py  video_backend.py  video_types.py  workflow.py
zvisiongenerator/processing/: __init__.py  contrast.py  saturation.py  sharpen.py
zvisiongenerator/schedulers/: __init__.py  beta_scheduler.py
zvisiongenerator/utils/: __init__.py  alignment.py  config.py  console.py  ffmpeg.py  filename.py  image_model_detect.py  interactive.py  lora.py  paths.py  platform.py  prompt_compose.py  prompts.py  video_model_detect.py
zvisiongenerator/web/: __init__.py  config.py  path_picker.py  prompt_files.py  server.py  web_runner.py
zvisiongenerator/web/static/app/: index.html
zvisiongenerator/web/static/app/assets/: main-B1iV0GhD.js  main-C9od22Pt.js  main-CbnzW6t3.css  main-Cd1OrcMg.css  main-DWarA-IE.css  main-SPMq7iHZ.js
zvisiongenerator/workflows/: __init__.py  image_stages.py  video_stages.py
