[project]
name = "z-vision-generator"
dynamic = ["version"]
description = "Z-Vision Generator — cross-platform AI image and video generator"
readme = "README.md"
requires-python = ">=3.14"
license = "AGPL-3.0-or-later"
authors = [{ name = "Knut Risheim" }]
keywords = ["ai", "image-generation", "video-generation", "z-image", "flux", "mlx", "diffusers", "stable-diffusion"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.0; sys_platform != 'darwin'",
    "diffusers>=0.37.1",
    "fastapi>=0.116.0",
    "hf-transfer>=0.1.9",
    "huggingface-hub>=0.30.0",
    "mflux>=0.17.4; sys_platform == 'darwin'",
    "numpy>=2.0.0",
    "Pillow>=12.0.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "scipy>=1.17.0",
    "torch>=2.11.0",
    "transformers>=5.0.0",
    "uvicorn>=0.35.0",
    "mlx>=0.31.0; sys_platform == 'darwin'",
    "mlx-lm>=0.31.0; sys_platform == 'darwin'",
    "safetensors>=0.4.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 200
exclude = ["zvisiongenerator/_version.py", "packages"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform != 'darwin'" },
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6",
    "pytest>=9.0.2",
    "ruff>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/knuthelge/ZVisionGenerator"
Repository = "https://github.com/knuthelge/ZVisionGenerator"
Documentation = "https://knuthelge.github.io/ZVisionGenerator/"
Changelog = "https://github.com/knuthelge/ZVisionGenerator/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/knuthelge/ZVisionGenerator/issues"

[project.scripts]
ziv = "zvisiongenerator.cli:main"
ziv-ui = "zvisiongenerator.web:main"
ziv-image = "zvisiongenerator.image_cli:main"
ziv-video = "zvisiongenerator.video_cli:main"
ziv-model = "zvisiongenerator.converters.convert_checkpoint:main"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.hooks.vcs]
version-file = "zvisiongenerator/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["zvisiongenerator", "packages/ltx_core_mlx", "packages/ltx_pipelines_mlx"]

[tool.hatch.build.targets.wheel.force-include]
"zvisiongenerator/config.yaml" = "zvisiongenerator/config.yaml"
